Expanded OpenAPI definition
Added hardware specific ID to sensor model.
Added backend call to retrieve a sensor based on its hardware id.
